--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,7 +1,7 @@
 modbus:
   - name: sma-sr_wr
     type: tcp
-    host: 192.168.10.2
+    host: 192.168.178.181
     port: 502
     delay: 2
     message_wait_milliseconds: 60
@@ -15,3 +15,18 @@ modbus:
         slave: 3
         address: 30777
         data_type: uint32
+
+  - name: sma-hm
+    type: tcp
+    host: 192.168.178.51
+    port: 502
+    delay: 2
+    message_wait_milliseconds: 60
+    timeout: 5
+    sensors:
+      - name: sma_ggc_hm
+        unique_id: smaggc_hm
+        address: 43090
+        data_type: int32
+        slave: 1
+        scan_interval: 60
